resuem si now downlaodable and added a header

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -63,6 +63,10 @@ body {
   color: rgb(212, 54, 212);
 }
 
+.header {
+  text-align: center;
+  padding-left: 180px;
+}
 /* Header image styling */
 #main-photo {
   width: 200px;
